--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   width: 100vw;
   height: 90vh;
-  font-size: 32px;
+  font-size: 36px;
 }
 
 .frame {
@@ -12,25 +12,19 @@ body {
   display: flex;
   gap: 40px;
   flex-direction: column;
-  width: 400px;
+  width: 350px;
   padding: 15px;
   background-color: lightgray;
+  justify-content: center;
 }
 .window {
-  width: 400px;
+  width: 340px;
   min-height: 150px;
   border: 1px solid grey;
-  gap: 10px;
   background-color: white;
 }
 
-.middle-section {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.middle-section > button {
+.numbers > #delBtn {
   font-size: 34px;
   background-color: orange;
 }
@@ -43,7 +37,7 @@ body {
 .numbers {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 5px;
 }
 .functions {
   display: flex;
@@ -52,10 +46,7 @@ body {
   justify-content: center;
 }
 .numpad button {
-  font-size: 50px;
-  width: 65px;
-  height: 90px;
-}
-#sum {
-  width: 130px;
+  font-size: 36px;
+  width: 70px;
+  height: 60px;
 }
