--- a/style.css
+++ b/style.css
@@ -15,18 +15,17 @@ body {
   width: 350px;
   padding: 15px;
   background-color: lightgray;
-  justify-content: center;
+  align-items: center;
 }
-.window {
-  width: 340px;
+#window {
+  width: 310px;
   min-height: 150px;
   border: 1px solid grey;
   background-color: white;
+  padding: 10px;
 }
-
-.numbers > #delBtn {
-  font-size: 34px;
-  background-color: orange;
+#answer {
+  color: darkgray;
 }
 
 .numpad {
@@ -39,6 +38,11 @@ body {
   flex-wrap: wrap;
   gap: 5px;
 }
+.numbers > #delBtn {
+  font-size: 34px;
+  background-color: orange;
+}
+
 .functions {
   display: flex;
   flex-wrap: wrap;
